--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -5,7 +5,11 @@
     padding-top: 2rem;
     margin-top: auto;
    background-color: $footer;
-   line-height: 1.5;
+   /*line-height: 1.5;*/
+   left: 0;
+   width: 100%;
+   bottom: 0;
+   
 a{
     text-decoration: none;
     color: #eee;
