--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33426,89 +33426,34 @@ textarea.form-control-lg {
   }
 }
 
-.footer {
-  padding-top: 2rem;
-  margin-top: auto;
-  background-color: #adb5bd;
-  /*line-height: 1.5;*/
-  left: 0;
-  width: 100%;
-  bottom: 0;
-}
-.footer a {
-  text-decoration: none;
-  color: #eee;
-}
-.footer a:hover {
-  text-decoration: underline;
-}
-.footer .ft-title {
-  color: #fff;
-  font-family: ’Merriweather’, serif;
-  font-size: 1.375rem;
-  padding-bottom: 0.625rem;
-}
-.footer .footer-main {
-  padding: 1.25rem 1.875rem;
-  display: flex;
-  flex-wrap: wrap;
-}
-.footer .footer-main-item {
-  padding: 1.25rem;
-  min-width: 12.5rem;
-}
-
-ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-@media only screen and (min-width: 29.8125rem) {
-  .footer-main {
-    justify-content: space-around;
-  }
-}
-@media only screen and (min-width: 77.5rem) {
-  .footer-main {
-    justify-content: space-evenly;
-  }
-}
-.ft-social {
+.foot .ft-social {
   padding: 0 1.875rem 1.25rem;
 }
-
-.ft-social-list {
+.foot .ft-social .ft-social-list {
   display: flex;
   justify-content: center;
   border-top: 1px #777 solid;
   padding-top: 1.25rem;
 }
-
-.ft-social-list li {
+.foot .ft-social .ft-social-list li {
   margin: 0.5rem;
   font-size: 1.25rem;
+  list-style-type: none;
 }
-
-.ft-legal {
-  padding: 0.9375rem 1.875rem;
-  background-color: #333;
+.foot .ft-social .ft-social-list .fa {
+  color: #000075;
+  font-size: 30px;
 }
-
-.ft-legal-list {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+.foot .ft-copy .sec-copy p {
+  color: #000075;
+  padding: 10px;
 }
-
-.ft-legal-list li {
-  margin: 0.125rem 0.625rem;
-  white-space: nowrap;
+.foot a {
+  text-decoration: none;
+  color: #eee;
 }
-
-/* one before the last child */
-.ft-legal-list li:nth-last-child(2) {
-  flex: 1;
-  /* same as flex-grow: 1; */
+.foot a:hover {
+  text-decoration: underline;
 }
 
 body {
@@ -33725,6 +33670,30 @@ body {
 }
 .skills .fa-star {
   color: #FFD700;
+}
+
+.s-skills h2 {
+  padding: 25px !important;
+}
+.s-skills h3,
+.s-skills h2 {
+  color: #000075;
+}
+.s-skills .fa {
+  color: #2FB8FF;
+  font-size: 80px;
+  padding: 10px;
+}
+.s-skills .quote {
+  font-style: italic;
+}
+.s-skills .foot .ft-social .ft-social-list .fa {
+  color: #000075;
+  font-size: 30px;
+}
+.s-skills .foot .ft-copy .sec-copy p {
+  color: #000075;
+  padding: 10px;
 }
 
 .main-timeline9 {
