--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -8,7 +8,7 @@
         padding: 0 0.65rem;
 
         a {
-            color: $black !important;
+            color: $primary !important;
             font-weight: bold;
         }
     }
