Portfolio-pagina en knopje om cv te downloaden bijgewerkt.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,7 @@ $cyan:    #ecf1fd;
 $blue-gray: #7393B3;
 $gold: #FFD700;
 $mj-blue: #2FB8FF;
+$op-primary: rgba(#000075, .6);
 
 $fa-font-path           : "../webfonts";
 
