--- a/scss/components/_breakpoints.scss
+++ b/scss/components/_breakpoints.scss
@@ -1,4 +1,12 @@
-@import '../variables';
+//Breakpoints
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
 
 @mixin xs {
     @media (min-width: map-get($grid-breakpoints, "xs")){
