Nog twee projecten te gaan bij portfolio-pagina.

--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -22,6 +22,9 @@
                 color: $primary;
                 font-size: 30px;
             }
+            .fa:hover{
+                color: $purple;
+            }
         }
     }
 
