--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22267,6 +22267,11 @@ textarea.form-control-lg {
 .menu li a {
   color: #000075 !important;
   font-weight: bold;
+  font-size: 18px;
+}
+.menu li a:hover {
+  color: #8C13B2 !important;
+  text-decoration: underline;
 }
 
 .welcome {
@@ -22276,11 +22281,11 @@ textarea.form-control-lg {
   height: 100vh;
 }
 .welcome .cv {
-  font-size: 40px;
+  font-size: 35px;
 }
 .welcome .cv a {
   width: auto;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   text-decoration: none;
   padding: 14px 25px;
@@ -22288,6 +22293,11 @@ textarea.form-control-lg {
   background-color: #000075;
   color: #fff;
   border-radius: 50px;
+  text-transform: initial;
+  font-weight: 400;
+}
+.welcome .cv a:hover {
+  background-color: #8C13B2;
 }
 
 .secs {
@@ -22359,6 +22369,9 @@ textarea.form-control-lg {
 .foot .ft-social .ft-social-list .fa {
   color: #000075;
   font-size: 30px;
+}
+.foot .ft-social .ft-social-list .fa:hover {
+  color: #8C13B2;
 }
 .foot .ft-copy .sec-copy p {
   color: #000075;
@@ -22448,6 +22461,23 @@ textarea.form-control-lg {
 #portfolio .project {
   font-style: italic;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.portfolio-modal .p-title {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+}
+.portfolio-modal h5 {
+  color: #000075;
+  padding-top: 15px !important;
+}
+.portfolio-modal ul {
+  list-style-type: none;
+}
+.portfolio-modal .btn {
+  color: #fff !important;
+  background-color: #000075 !important;
+  margin: 15px;
 }
 
 body {
