--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -10,6 +10,11 @@
         a {
             color: $primary !important;
             font-weight: bold;
+            font-size: 18px;
+        }
+        a:hover{
+            color: $purple !important;
+            text-decoration: underline;
         }
     }
 }
