--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -43,6 +43,25 @@
     font-style: italic;
     font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
+
+.portfolio-modal{
+.p-title{
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+}
+h5{
+    color: $primary;
+    padding-top: 15px !important;
+}
+ul{
+    list-style-type: none;
+}
+.btn{
+    color: $white !important;
+    background-color: $primary !important;
+    margin: 15px;
+}
+}
   
 //   .portfolio-modal .modal-dialog {
 //     margin: 1rem;
