--- a/scss/sections/_welcome.scss
+++ b/scss/sections/_welcome.scss
@@ -9,10 +9,10 @@ width: 100%;
 height: 100vh;
 
 .cv{
-    font-size: 40px;
+    font-size: 35px;
     a{
         width: auto;
-        font-size: 30px;
+        font-size: 25px;
         text-align: center;
         text-decoration: none;
         padding: 14px 25px;
@@ -20,6 +20,11 @@ height: 100vh;
         background-color: $primary;
         color: $white;
         border-radius: 50px;
+        text-transform: initial;
+        font-weight: 400;
+    }
+    a:hover{
+        background-color: $purple;
     }
     
 }
