--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,7 @@ $blue-gray: #7393B3;
 $gold: #FFD700;
 $mj-blue: #2FB8FF;
 $op-primary: rgba(#000075, .6);
+$npx-orange: #e94e2a;
 
 $fa-font-path           : "../webfonts";
 
