--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,9 +13,8 @@
 //import partials
 @use "sections/navbar";
 @use "sections/welcome";
+@use "sections/about";
 @use "sections/footer";
 @use "sections/portfolio";
 @use "sections/skills";
 @use "sections/hobbies";
-@use "sections/experience";
-@use "sections/contact";
