--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -22274,30 +22280,15 @@ textarea.form-control-lg {
   text-decoration: underline;
 }
 
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
+}
+
 .welcome {
   background-color: #fff;
   padding: 5rem 0 0 0;
   width: 100%;
   height: 100vh;
-}
-.welcome .cv {
-  font-size: 35px;
-}
-.welcome .cv a {
-  width: auto;
-  font-size: 25px;
-  text-align: center;
-  text-decoration: none;
-  padding: 14px 25px;
-  display: inline-block;
-  background-color: #000075;
-  color: #fff;
-  border-radius: 50px;
-  text-transform: initial;
-  font-weight: 400;
-}
-.welcome .cv a:hover {
-  background-color: #8C13B2;
 }
 
 .secs {
@@ -22312,7 +22303,7 @@ textarea.form-control-lg {
 
 @media (min-width: 0) {
   .img-sec {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 }
 @media (min-width: 576px) {
@@ -22331,25 +22322,68 @@ textarea.form-control-lg {
   }
 }
 
+.hier {
+  font-weight: bold;
+  color: #000075;
+}
+
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
+}
+
+h2, h3 {
+  color: #000075;
+  padding: 10px;
+}
+
+.part2 {
+  padding-top: 20px;
+}
+.part2 p {
+  font-size: 18px;
+}
 @media (min-width: 0) {
-  .test {
-    color: red;
+  .part2 {
+    padding-left: 50px;
   }
 }
 @media (min-width: 576px) {
-  .test {
-    color: blue;
+  .part2 {
+    padding-left: 155px;
   }
 }
 @media (min-width: 768px) {
-  .test {
-    color: green;
+  .part2 {
+    padding-left: 20px;
   }
 }
 @media (min-width: 992px) {
-  .test {
-    color: yellow;
+  .part2 {
+    padding-left: 20px;
   }
+}
+
+.part1 {
+  padding-top: 20px;
+}
+
+.img {
+  border-radius: 25px;
+  height: 400px;
+  width: 300px;
+}
+
+ul {
+  list-style-type: none;
+  font-size: 18px;
+}
+ul a {
+  text-decoration: none;
+  color: #000;
+}
+
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
 }
 
 .foot .ft-social {
@@ -22463,9 +22497,31 @@ textarea.form-control-lg {
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+@media (min-width: 0) {
+  .portfolio-modal .modal-lg {
+    background-color: #fff !important;
+    height: auto;
+  }
+}
+@media (min-width: 576px) {
+  .portfolio-modal .modal-lg {
+    background-color: #fff !important;
+  }
+}
+@media (min-width: 768px) {
+  .portfolio-modal .modal-lg {
+    background-color: #fff !important;
+  }
+}
+@media (min-width: 992px) {
+  .portfolio-modal .modal-lg {
+    background-color: #fff !important;
+  }
+}
 .portfolio-modal .p-title {
   padding-top: 15px !important;
   padding-bottom: 15px !important;
+  border-bottom: solid 1px #000075;
 }
 .portfolio-modal h5 {
   color: #000075;
@@ -22478,175 +22534,19 @@ textarea.form-control-lg {
   color: #fff !important;
   background-color: #000075 !important;
   margin: 15px;
+  margin-bottom: 15px;
 }
 
-body {
-  margin-top: 20px;
+.npx h3 {
+  color: #e94e2a;
 }
 
-.ourTeam {
-  background: #319ac6;
-  height: 800px;
+.p-content {
+  background-color: #fff;
 }
 
-.ourTeam h2 {
-  color: #fff;
-  margin: 0 0 30px 0;
-}
-
-.ourTeam .i {
-  margin-top: 30px;
-}
-
-.ourTeam .i .c {
-  background: #fff;
-  -webkit-box-shadow: 0 4px 0 #2b86ac;
-  -moz-box-shadow: 0 4px 0 #2b86ac;
-  box-shadow: 0 4px 0 #2b86ac;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  position: relative;
-  overflow: hidden;
-  padding-bottom: 110px;
-}
-
-.ourTeam .i .c .wrap {
-  position: relative;
-}
-
-.ourTeam .i .c .wrap img {
-  width: 100%;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-topright: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-}
-
-.ourTeam .i .c .wrap .info {
-  padding: 30px 0;
-  position: absolute;
-  top: 100%;
-  width: 100%;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-}
-
-.ourTeam .i .c .wrap .info .name {
-  margin: 0;
-  font-size: 24px;
-  font-size: 2.4rem;
-  font-weight: 700;
-  margin: 0 0 8px 0;
-}
-
-.ourTeam .i .c .wrap .info .position {
-  margin: 0;
-  font-size: 14px;
-  font-size: 1.4rem;
-  color: #555659;
-}
-
-.ourTeam .i .c .more {
-  position: absolute;
-  bottom: -100%;
-  width: 100%;
-  transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-}
-
-.ourTeam .i .c .more p {
-  margin: 0 18px 30px 18px;
-  line-height: 22px;
-}
-
-.ourTeam .i .c .more .socials {
-  margin: 0 0 20px 0;
-}
-
-.ourTeam .i .c .more .socials a {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  font-size: 22px;
-  font-size: 2.2rem;
-  color: #fff;
-  margin: 0 0 0 3px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  text-align: center;
-  -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
-}
-
-.ourTeam .i .c .more .socials a:first-child {
-  margin: 0;
-}
-
-.ourTeam .i .c .more .socials a.facebook {
-  background: #3262b9;
-}
-
-.ourTeam .i .c .more .socials a.facebook:hover {
-  background: #2d57a5;
-}
-
-.ourTeam .i .c .more .socials a.twitter {
-  background: #3dd7e5;
-}
-
-.ourTeam .i .c .more .socials a.twitter:hover {
-  background: #27d2e2;
-}
-
-.ourTeam .i .c .more .socials a.google-plus {
-  background: #e23535;
-}
-
-.ourTeam .i .c .more .socials a.google-plus:hover {
-  background: #de2020;
-}
-
-.ourTeam .i .c .more .socials a.linkedin {
-  background: #069;
-}
-
-.ourTeam .i .c .more .socials a.linkedin:hover {
-  background: #005580;
-}
-
-.ourTeam .i .c:hover img {
-  -moz-opacity: 0;
-  -khtml-opacity: 0;
-  -webkit-opacity: 0;
-  opacity: 0;
-}
-
-.ourTeam .i .c:hover .info {
-  top: 0;
-}
-
-.ourTeam .i .c:hover .more {
-  bottom: 0;
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
 }
 
 .bgc {
@@ -22722,390 +22622,62 @@ body {
 .s-skills .quote {
   font-style: italic;
 }
-
-.main-timeline9 {
-  position: relative;
+.s-skills .fa-star, .s-skills .fa-star-half {
+  color: #FFD700;
+  font-size: 18px;
 }
 
-.main-timeline9:after, .main-timeline9:before {
-  content: "";
-  display: block;
-  width: 100%;
-  clear: both;
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
 }
 
-.main-timeline9:before {
-  content: "";
-  width: 3px;
-  height: 100%;
-  background: #302124;
-  position: absolute;
-  top: 0;
-  left: 50%;
+.hobby h2 {
+  padding: 25px;
 }
-
-.main-timeline9 .timeline {
-  width: 50%;
-  float: left;
-  position: relative;
-  z-index: 1;
+.hobby .card {
+  height: 36rem;
 }
-
-.main-timeline9 .timeline:after, .main-timeline9 .timeline:before {
-  content: "";
-  display: block;
-  width: 100%;
-  clear: both;
-}
-
-.main-timeline9 .timeline:first-child:before, .main-timeline9 .timeline:last-child:before {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #fff;
-  border: 4px solid #000075;
-  position: absolute;
-  top: 0;
-  right: -14px;
-  z-index: 1;
-}
-
-.main-timeline9 .timeline:last-child:before {
-  top: auto;
-  bottom: 0;
-}
-
-.main-timeline9 .timeline:last-child:nth-child(even):before {
-  right: auto;
-  left: -12px;
-  bottom: -2px;
-}
-
-.main-timeline9 .timeline-content {
-  text-align: center;
-  margin-top: 8px;
-  position: relative;
-  transition: all 0.3s ease 0s;
-}
-
-.main-timeline9 .timeline-content:before {
-  content: "";
-  width: 100%;
-  height: 5px;
-  background: #000075;
-  position: absolute;
-  top: 88px;
-  left: 0;
-  z-index: -1;
-}
-
-.main-timeline9 .circle {
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  background: #fff;
-  border: 8px solid #000075;
-  float: left;
-  margin-right: 25px;
-  position: relative;
-}
-
-.main-timeline9 .circle span:after, .main-timeline9 .circle span:before, .main-timeline9 .circle:before {
-  content: "";
-  margin: auto;
-  position: absolute;
-  right: -33px;
-  bottom: 0;
-  z-index: -1;
-}
-
-.main-timeline9 .circle:before {
-  width: 26px;
-  height: 30px;
-  background: #000075;
-  top: 0;
-  box-shadow: inset 7px 0 9px -7px #444;
-}
-
-.main-timeline9 .circle span {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  line-height: 160px;
-  border: 3px solid #adabab;
-  font-size: 80px;
-  color: #454344;
-}
-
-.main-timeline9 .circle span:after, .main-timeline9 .circle span:before {
-  width: 28px;
-  height: 50px;
-  background: #fff;
-  border-radius: 0 0 0 21px;
-  top: -54px;
-}
-
-.main-timeline9 .circle span:after {
-  border-radius: 21px 0 0;
-  top: 0;
-  bottom: -56px;
-}
-
-.main-timeline9 .content {
-  display: table;
-  padding-right: 40px;
-  position: relative;
-}
-
-.main-timeline9 .year {
-  display: block;
-  padding: 10px;
-  margin: 10px 0 50px;
-  background: #000075;
-  border-radius: 7px;
-  font-size: 25px;
-  color: #fff;
-}
-
-.main-timeline9 .title {
-  font-size: 25px;
-  font-weight: 700;
+.hobby .card a {
+  background-color: #fff;
   color: #000075;
-  margin-top: 0;
+  font-weight: bold;
 }
-
-.main-timeline9 .icon span:after, .main-timeline9 .icon span:before, .main-timeline9 .icon:before {
-  content: "";
-  height: 25px;
-  margin: auto;
-  position: absolute;
-  bottom: 0;
-  z-index: -1;
-  left: -15px;
+.hobby .card a:hover {
+  color: #8C13B2;
+  text-decoration: underline;
 }
-
-.main-timeline9 .description {
-  font-size: 14px;
-  color: #a6a6a6;
-  text-align: justify;
-}
-
-.main-timeline9 .icon {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #fff;
-  border: 4px solid #000075;
-  position: absolute;
-  top: 78px;
-  right: -14px;
-}
-
-.main-timeline9 .icon:before {
-  width: 15px;
-  background: #000075;
-  top: -1px;
-}
-
-.main-timeline9 .icon span:after, .main-timeline9 .icon span:before {
-  width: 21px;
-  background: #fff;
-  border-radius: 0 0 21px;
-  top: -30px;
-}
-
-.main-timeline9 .icon span:after {
-  border-radius: 0 21px 0 0;
-  top: 0;
-  left: -15px;
-  bottom: -30px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .circle, .main-timeline9 .timeline:nth-child(2n) .timeline-content {
-  float: right;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .circle {
-  margin: 0 0 0 25px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .circle:before {
-  right: auto;
-  left: -33px;
-  box-shadow: -7px 0 9px -7px #444 inset;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .circle span:after, .main-timeline9 .timeline:nth-child(2n) .circle span:before {
-  right: auto;
-  left: -33px;
-  border-radius: 0 0 21px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .circle span:after {
-  border-radius: 0 21px 0 0;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .content {
-  padding: 0 0 0 40px;
-  margin-left: 2px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .icon {
-  right: auto;
-  left: -14px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .icon span:after, .main-timeline9 .timeline:nth-child(2n) .icon span:before, .main-timeline9 .timeline:nth-child(2n) .icon:before {
-  left: auto;
-  right: -15px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .icon span:before {
-  border-radius: 0 0 0 21px;
-}
-
-.main-timeline9 .timeline:nth-child(2n) .icon span:after {
-  border-radius: 21px 0 0;
-}
-
-.main-timeline9 .timeline:nth-child(2) {
-  margin-top: 180px;
-}
-
-.main-timeline9 .timeline:nth-child(odd) {
-  margin: -175px 0 0;
-}
-
-.main-timeline9 .timeline:nth-child(even) {
-  margin-bottom: 80px;
-}
-
-.main-timeline9 .timeline:first-child, .main-timeline9 .timeline:last-child:nth-child(even) {
-  margin: 0;
-}
-
-@media only screen and (max-width: 990px) {
-  .main-timeline9:before {
-    left: 100%;
+@media (min-width: 0) {
+  .hobby .crd {
+    margin-bottom: 25px;
   }
-
-  .main-timeline9 .timeline {
-    width: 100%;
-    float: none;
-    margin-bottom: 20px !important;
-  }
-
-  .main-timeline9 .timeline:first-child:before, .main-timeline9 .timeline:last-child:before {
-    left: auto !important;
-    right: -13px !important;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .circle {
-    float: left;
-    margin: 0 25px 0 0;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .circle:before {
-    right: -33px;
-    left: auto;
-    box-shadow: 7px 0 9px -7px #444 inset;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .circle span:after, .main-timeline9 .timeline:nth-child(2n) .circle span:before {
-    right: -33px;
-    left: auto;
-    border-radius: 0 0 0 21px;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .circle span:after {
-    border-radius: 21px 0 0;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .content {
-    padding: 0 40px 0 0;
-    margin-left: 0;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .icon {
-    right: -14px;
-    left: auto;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .icon span:after, .main-timeline9 .timeline:nth-child(2n) .icon span:before, .main-timeline9 .timeline:nth-child(2n) .icon:before {
-    left: -15px;
-    right: auto;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .icon span:before {
-    border-radius: 0 0 21px;
-  }
-
-  .main-timeline9 .timeline:nth-child(2n) .icon span:after {
-    border-radius: 0 21px 0 0;
-  }
-
-  .main-timeline9 .timeline:nth-child(2), .main-timeline9 .timeline:nth-child(even), .main-timeline9 .timeline:nth-child(odd) {
-    margin: 0;
+  .hobby .crd .card {
+    height: auto;
   }
 }
-@media only screen and (max-width: 480px) {
-  .main-timeline9:before {
-    left: 0;
+@media (min-width: 576px) {
+  .hobby .crd {
+    padding-bottom: 25px;
   }
-
-  .main-timeline9 .timeline:first-child:before, .main-timeline9 .timeline:last-child:before {
-    left: -12px !important;
-    right: auto !important;
-  }
-
-  .main-timeline9 .circle, .main-timeline9 .timeline:nth-child(2n) .circle {
-    width: 130px;
-    height: 130px;
-    float: none;
-    margin: 0 auto;
-  }
-
-  .main-timeline9 .timeline-content:before {
-    width: 99.5%;
-    top: 68px;
-    left: 0.5%;
-  }
-
-  .main-timeline9 .circle span {
-    line-height: 115px;
-    font-size: 60px;
-  }
-
-  .main-timeline9 .circle span:after, .main-timeline9 .circle span:before, .main-timeline9 .circle:before, .main-timeline9 .icon {
-    display: none;
-  }
-
-  .main-timeline9 .content, .main-timeline9 .timeline:nth-child(2n) .content {
-    padding: 0 10px;
-  }
-
-  .main-timeline9 .year {
-    margin-bottom: 15px;
-  }
-
-  .main-timeline9 .description {
-    text-align: center;
+  .hobby .crd .card {
+    height: 34rem;
   }
 }
-.contact {
-  padding-top: 10px;
+@media (min-width: 768px) {
+  .hobby .crd {
+    margin-bottom: 25px;
+  }
+  .hobby .crd .card {
+    height: 38rem;
+  }
 }
-.contact .card {
-  margin: auto;
-  width: 800px;
-  background: #0000db;
-  border-radius: 16px;
-  box-shadow: 0 4px 30px #0000db;
-  backdrop-filter: blur(11.7px);
-  -webkit-backdrop-filter: blur(12.7px);
-  border: 1px solid #0000c2;
+@media (min-width: 992px) {
+  .hobby .crd {
+    margin-bottom: 10px;
+  }
+}
+
+h1 h2 h3 h4 h5 {
+  font-family: "Lato", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
