--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -1,4 +1,7 @@
-@use  '../variables' as *;
+@use '../components/mixins' as *;
+@use '../components/breakpoints' as *;
+@use '../variables' as *;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 #portfolio .project{
     max-width: 26rem;
@@ -45,9 +48,25 @@
   }
 
 .portfolio-modal{
+        .modal-lg{
+    @include xs {
+        background-color: #fff!important;
+        height: auto;
+    }
+    @include sm {
+        background-color: #fff !important;
+    }
+    @include md {
+        background-color: #fff !important;
+    }
+    @include lg {
+        background-color: #fff !important;
+    }
+}
 .p-title{
     padding-top: 15px !important;
     padding-bottom: 15px !important;
+    border-bottom: solid 1px $primary;
 }
 h5{
     color: $primary;
@@ -60,214 +79,17 @@ ul{
     color: $white !important;
     background-color: $primary !important;
     margin: 15px;
+    margin-bottom: 15px;
 }
 }
-  
-//   .portfolio-modal .modal-dialog {
-//     margin: 1rem;
-//     max-width: 100vw;
-//   }
-//   .portfolio-modal .modal-content {
-//     padding-top: 6rem;
-//     padding-bottom: 6rem;
-//     text-align: center;
-//   }
-//   .portfolio-modal .modal-content h2, .portfolio-modal .modal-content .h2 {
-//     font-size: 3rem;
-//     line-height: 3rem;
-//   }
-//   .portfolio-modal .modal-content p.item-intro {
-//     font-style: italic;
-//     margin-bottom: 2rem;
-//     font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-//   }
-//   .portfolio-modal .modal-content p {
-//     margin-bottom: 2rem;
-//   }
-//   .portfolio-modal .modal-content ul.list-inline {
-//     margin-bottom: 2rem;
-//   }
-//   .portfolio-modal .modal-content img {
-//     margin-bottom: 2rem;
-//   }
-//   .portfolio-modal .close-modal {
-//     position: absolute;
-//     top: 1.5rem;
-//     right: 1.5rem;
-//     width: 3rem;
-//     height: 3rem;
-//     cursor: pointer;
-//     background-color: transparent;
-//   }
-//   .portfolio-modal .close-modal:hover {
-//     opacity: 0.3;
-//   }
-
-
-
-body{margin-top:20px;}
-
-.ourTeam {
-    background: #319ac6;
-    height:800px;
+.npx{
+    h3{
+        color: $npx-orange;
+    }
 }
-
-.ourTeam h2 {
-    color: #fff;
-    margin: 0 0 30px 0
+.p-content{
+    background-color: $white;
 }
-
-.ourTeam .i {
-    margin-top: 30px
-}
-
-.ourTeam .i .c {
-    background: #fff;
-    -webkit-box-shadow: 0 4px 0 #2b86ac;
-    -moz-box-shadow: 0 4px 0 #2b86ac;
-    box-shadow: 0 4px 0 #2b86ac;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 110px
-}
-
-.ourTeam .i .c .wrap {
-    position: relative
-}
-
-.ourTeam .i .c .wrap img {
-    width: 100%;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease
-}
-
-.ourTeam .i .c .wrap .info {
-    padding: 30px 0;
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease
-}
-
-.ourTeam .i .c .wrap .info .name {
-    margin: 0;
-    font-size: 24px;
-    font-size: 2.4rem;
-    font-weight: 700;
-    margin: 0 0 8px 0
-}
-
-.ourTeam .i .c .wrap .info .position {
-    margin: 0;
-    font-size: 14px;
-    font-size: 1.4rem;
-    color: #555659
-}
-
-.ourTeam .i .c .more {
-    position: absolute;
-    bottom: -100%;
-    width: 100%;
-    transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease
-}
-
-.ourTeam .i .c .more p {
-    margin: 0 18px 30px 18px;
-    line-height: 22px
-}
-
-.ourTeam .i .c .more .socials {
-    margin: 0 0 20px 0
-}
-
-.ourTeam .i .c .more .socials a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 22px;
-    font-size: 2.2rem;
-    color: #fff;
-    margin: 0 0 0 3px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    text-align: center;
-    -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, .1);
-    box-shadow: 0 3px 0 rgba(0, 0, 0, .1)
-}
-
-.ourTeam .i .c .more .socials a:first-child {
-    margin: 0
-}
-
-.ourTeam .i .c .more .socials a.facebook {
-    background: #3262b9
-}
-
-.ourTeam .i .c .more .socials a.facebook:hover {
-    background: #2d57a5
-}
-
-.ourTeam .i .c .more .socials a.twitter {
-    background: #3dd7e5
-}
-
-.ourTeam .i .c .more .socials a.twitter:hover {
-    background: #27d2e2
-}
-
-.ourTeam .i .c .more .socials a.google-plus {
-    background: #e23535
-}
-
-.ourTeam .i .c .more .socials a.google-plus:hover {
-    background: #de2020
-}
-
-.ourTeam .i .c .more .socials a.linkedin {
-    background: #069
-}
-
-.ourTeam .i .c .more .socials a.linkedin:hover {
-    background: #005580
-}
-
-.ourTeam .i .c:hover img {
-    -moz-opacity: 0;
-    -khtml-opacity: 0;
-    -webkit-opacity: 0;
-    opacity: 0
-}
-
-.ourTeam .i .c:hover .info {
-    top: 0
-}
-
-.ourTeam .i .c:hover .more {
-    bottom: 0
+h1 h2 h3 h4 h5 {
+    font-family: 'Lato', sans-serif;
 }
