--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -1,6 +1,7 @@
 @use '../components/mixins' as *;
 @use '../components/breakpoints' as *;
 @use '../variables' as *;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 .bgc{
     background-color: #f8f8f8 !important; // #E2E1EC
@@ -78,6 +79,14 @@
     .quote {
         font-style: italic;
     }
+    .fa-star, .fa-star-half {
+        color: $star;
+        font-size: 18px;
+    }
 
     
+    
+}
+h1 h2 h3 h4 h5 {
+    font-family: 'Lato', sans-serif;
 }
