--- a/scss/sections/_welcome.scss
+++ b/scss/sections/_welcome.scss
@@ -1,6 +1,7 @@
 @use '../variables' as *;
 @use '../components/mixins' as *;
 @use '../components/breakpoints' as *;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
 .welcome {
 @include background;
@@ -8,26 +9,7 @@ padding: 5rem 0 0 0;
 width: 100%;
 height: 100vh;
 
-.cv{
-    font-size: 35px;
-    a{
-        width: auto;
-        font-size: 25px;
-        text-align: center;
-        text-decoration: none;
-        padding: 14px 25px;
-        display: inline-block;
-        background-color: $primary;
-        color: $white;
-        border-radius: 50px;
-        text-transform: initial;
-        font-weight: 400;
-    }
-    a:hover{
-        background-color: $purple;
-    }
-    
-}
+
 }
 
 .secs{
@@ -42,7 +24,7 @@ height: 100vh;
 }
 .img-sec{
     @include xs {
-        margin-bottom: 25px;
+        margin-bottom: 15px;
     }
     @include sm {
         padding-bottom: 25px;
@@ -54,18 +36,11 @@ height: 100vh;
         margin-bottom: 10px;
     }
 }
-.test{
-    @include xs {
-        color: red;
-    }
-    @include sm {
-        color: blue;
-    }
-    @include md {
-        color: green;
-    }
-    @include lg {
-        color: yellow;
-    }
-    
+.hier{
+    font-weight: bold;
+    color: $primary;
 }
+h1 h2 h3 h4 h5 {
+    font-family: 'Lato', sans-serif;
+}
+
