--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $gold: #FFD700;
 $mj-blue: #2FB8FF;
 $op-primary: rgba(#000075, .6);
 $npx-orange: #e94e2a;
+$linkedin: #0072b1;
 
 $fa-font-path           : "../webfonts";
 
