--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -93,3 +93,17 @@ ul{
 h1 h2 h3 h4 h5 {
     font-family: 'Lato', sans-serif;
 }
+.stage{
+  h3{
+    color: $npx-orange;
+}
+.go-back{
+background-color: $primary;
+color: $white;
+margin: 15px;
+font-weight: bold;
+}
+.go-back:hover{
+  background-color: $purple;
+}
+}
