--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -63,6 +63,10 @@
             padding: 25px !important;
             font-size: 80px;
         }
+        .skill-fa2 {
+            padding: 25px 5px 5px 0 !important;
+            font-size: 40px; 
+        }
     }
 
     .fa-star {
