--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -67,6 +67,50 @@
             padding: 25px 5px 5px 0 !important;
             font-size: 40px; 
         }
+        
+    }
+    .fr-card{
+        border: 5px solid $linkedin !important;
+        border-radius: 8px;
+        margin: auto;
+        width: 17rem !important;
+        margin: auto;
+        margin-bottom: 22px;
+        height: 27rem;
+        
+        .fr-card:hover {
+            /* Set the scale transformation to 1.1 to zoom in */
+            transform: scale(1.1);
+            /* Add a box-shadow to create a depth effect */
+            box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+            /* Add a transition to make the zooming effect smooth */
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+          }          
+
+        .fa-star-half {
+            color: $star;
+        }
+        .skill-fa {
+            padding: 25px !important;
+            font-size: 80px;
+        }
+        .skill-fa2 {
+            padding: 15px 5px 5px 0 !important;
+            font-size: 40px; 
+        }
+        .fa-sass{
+            color: palevioletred;
+        }
+        .fa-js{
+            color: $star;
+        }
+        .ts {
+            color: $linkedin;
+            font-size: 60px; 
+        }
+        .fa-react{
+            color: $mj-blue;
+        }
     }
 
     .fa-star {
@@ -103,6 +147,17 @@
 
 
 }
+
+.split-background {
+    background: #ffffff; /* Set the initial background color */
+    //background: linear-gradient(to bottom, #f8f8f8 25%, #000029 50%);
+    background: linear-gradient(to bottom, #f8f8f8 25%, #252566 50%);
+  }
+  .tit {
+    padding-top: 35px;
+    padding-bottom: 20px;
+}
+  
 
 h1 h2 h3 h4 h5 {
     font-family: 'Lato', sans-serif;
